<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.student.myapp.MainActivity"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textAlignment="center"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_height="0dp">

            <TextView
                android:textColor="@color/Red"
                android:layout_weight="1"
                android:text="@string/username"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:textAlignment="center"/>

            <EditText
                android:hint="@string/enter_username"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:layout_width="0dp"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="2">

            <TextView
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/password"
                android:textAlignment="center"
                android:layout_gravity="center"

                />

            <EditText
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:hint="@string/enter_password"
                android:layout_gravity="center"
                android:inputType="textPassword"
                android:id="@+id/userpass"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_log_in"
             />

    </LinearLayout>



</LinearLayout>
